<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gray"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/black"
        android:hint="@string/name"
        android:textColor="@color/Orchid"
        android:textColorHint="@color/Orchid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <EditText
        android:id="@+id/editTextSecName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/black"
        android:hint="@string/secName"
        android:textColor="@color/Orchid"
        android:textColorHint="@color/Orchid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <TextView
        android:id="@+id/textViewProducts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blanck1"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSecName"
        app:layout_constraintVertical_bias="0.045" />

    <Button
        android:id="@+id/buttonDate"
        android:layout_width="193dp"
        android:layout_height="44dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/Orchid"
        android:text="@string/date"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewProducts" />

    <TextView
        android:id="@+id/textViewSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blanck2"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.239"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDate"
        app:layout_constraintVertical_bias="0.045" />

    <Button
        android:id="@+id/buttonTime"
        android:layout_width="229dp"
        android:layout_height="41dp"
        android:layout_marginStart="80dp"
        android:backgroundTint="@color/Orchid"
        android:text="@string/time"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSize" />

    <EditText
        android:id="@+id/editTextData"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/black"
        android:hint="@string/data"
        android:textColor="@color/Orchid"
        android:textColorHint="@color/Orchid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTime" />

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Orchid"
        android:text="@string/reg"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.858" />

</androidx.constraintlayout.widget.ConstraintLayout>